# LoopRelay

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CommandCenter.slnx  Directory.Build.props  Directory.Packages.props  LICENSE  LoopRelay.slnx  MVP-GAP-SYNTHESIS-AUDIT.md  README.md  SEMANTIC-OPACITY-AUDIT.md  app.dc.html  architectural-retirement-strategy-audit.md  architecture-audit.md  architecture-convergence-roadmap.md  architecture-evolution.md  architecture-opportunities.md  architecture-synthesis.md  audit-02.md  audit-03.md  audit-04.md  audit-findings.md  audit.md  bug.md  canonical-architecture-convergence-audit.md  canonical-semantic-architecture-roadmap.md  certification-refinement-plan.md  cleanup-pass-2-plan.md  cleanup-plan.md  completion-plan.md  ctx.md  decision-engine-audit.md  design.md  epic-refactor-plan.md  execution-model-and-effort-audit.md  execution-model-and-effort-plan.md  founder-intent.md  human-cognition-audit.md  information-architecture-audit.md  (+36 more)
.agents/: audit-01.md  audit-02.md  audit-03.md  backlog-audit.md  backlog.md  details.md  maturity-audit.md  operational_context.md  plan-audit.md  plan.md  planning-to-relay-audit.md  post-refactor-plan.md  pre-refactor-plan.md  reasoning-trajectory-audit.md  roadmap-2.md  roadmap.md
config/: settings.default.json
docs/: agents-artifact-ownership.md  architectural-capabilities.md  architectural-evidence.md  architectural-mechanisms.md  architecture-decision-governance.md  architecture.md  (+25 more)
src/CommandCenter.Shell/: Cargo.toml  tauri.conf.json
src/CommandCenter.Shell/src/: main.rs
(+5368 files in other folders)
